[gd_scene load_steps=7 format=3 uid="uid://k6ipuwviptmf"]

[ext_resource type="Texture2D" uid="uid://c0yng87jdr4hu" path="res://assets/sprite/bg_ground.png" id="1_onqr8"]
[ext_resource type="PackedScene" uid="uid://bhell6isufwvh" path="res://scenes/player_character.tscn" id="1_w5aja"]
[ext_resource type="Script" uid="uid://ca4x823pat04k" path="res://scripts/game_manager.gd" id="1_ycayy"]
[ext_resource type="Script" uid="uid://clyuxkpo30lwg" path="res://scripts/hazard_manager.gd" id="2_bw6k5"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lxttp"]
b = Vector2(0, 307)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_w5aja"]
a = Vector2(-113, 0)
b = Vector2(714, 0)

[node name="GameScene" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_ycayy")

[node name="HazardManager" type="Node" parent="GameManager"]
script = ExtResource("2_bw6k5")

[node name="Landscape" type="Node" parent="."]

[node name="Ground" type="Parallax2D" parent="Landscape"]
repeat_size = Vector2(576, 0)
autoscroll = Vector2(-70, 0)
follow_viewport = false
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="Landscape/Ground"]
position = Vector2(288, 162)
texture = ExtResource("1_onqr8")

[node name="Borders" type="Node" parent="."]

[node name="BorderLeft" type="Area2D" parent="Borders"]
position = Vector2(-100, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderLeft"]
shape = SubResource("SegmentShape2D_lxttp")

[node name="BorderRight" type="Area2D" parent="Borders"]
position = Vector2(700, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderRight"]
shape = SubResource("SegmentShape2D_lxttp")

[node name="Ground" type="StaticBody2D" parent="Borders"]
position = Vector2(0, 310)
collision_layer = 5
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Ground"]
shape = SubResource("SegmentShape2D_w5aja")

[node name="Ceiling" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Ceiling"]
shape = SubResource("SegmentShape2D_w5aja")

[node name="Hazards" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(2, 2)

[node name="PlayerCharacter" parent="." instance=ExtResource("1_w5aja")]
position = Vector2(148, 293)

[connection signal="area_entered" from="Borders/BorderLeft" to="GameManager" method="_on_border_left_area_entered"]
